--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore Chris's local files
+# (created via www.railsapps.github.io/installrubyonrails-mac.html)
+.ruby-gemset
+.ruby-version
