--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,8 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+production:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  facebook_app_id: 1671961436380885
+  facebook_app_secret: <%= ENV["2b0786b6a256391423941f0896eb8ce7"] %>
